Fix navbar collapse

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -90,12 +90,36 @@ a:hover {
         width: 100%;
     }
 
+    .jumbotron {
+	padding-left: 1%;
+	padding-right: 1%;
+    }
+
+    .display-4 {
+	font-size: x-large;
+    }
+
+    #name {
+	font-size: x-large;
+    }
+
+    .avatar {
+	vertical-align: middle;
+	width: 30%;
+	height: 15%;
+    }
+
     .active-content {
         margin-top: 15%;
+	font-size: medium;
+    }
+
+    .footer-copyright {
+	font-size: small;
     }
 
     .navbar-collapse {
-        position: absolute;
+        position: fixed;
         background-color: #141414;
         top: 75px;
         left: 0;
@@ -105,6 +129,7 @@ a:hover {
         width: 100%;
         text-align: center;
         font-size: x-large;
+	z-index: 10;
     }
 
     .navbar-collapse.collapsing {
